# musical-garbanzo

./: .gitignore  README.md  clipboard_log.txt  pyproject.toml
cliplogger/: main.py
cliplogger/utils/: clipboard_utils.py  file_utils.py  input_monitor.py  logger.py  storage_utils.py
utils/: file_monitor.py  storage_utils.py
